# citizens

./: README.md  docker-compose.yml
nginx/: nginx.conf
web/: Dockerfile  manage.py  pyproject.toml  uwsgi.ini
web/citizens/: app.py  config.py  wsgi.py
web/citizens/citizens/: error_messages.py  models.py  module.py  validators.py  views.py
web/citizens/tests/: config.py  conftest.py  matchers.py  some_testing_data.py  test_add_imports.py  test_citizen_validators.py  test_nonexistent_handlers.py  test_patch_citizen.py  test_server_connect.py
web/citizens/utils/: api_view.py  validators.py
web/migrations/versions/: d7f2b2669b5b_.py  f21d6297fd7b_.py  ffc55839ed22_.py
